--- a/presentation.tex
+++ b/presentation.tex
@@ -21,9 +21,11 @@
 \usepackage{rotating}    % for sideways tables/figures
 \usepackage{xspace}
 \usepackage{subfigure}
+\usepackage{xmpmulti}
 \usepackage[labelformat=empty]{caption}
 \usepackage{algpseudocode}
 \usepackage{tabularx}
+\usepackage{fixltx2e}
 
 
 
@@ -151,7 +153,7 @@
 
 \subtitle{Learning constraints in spreadsheets and tabular data}
 %\author{Luc De Raedt, \underline{Sergey Paramonov}, Matthijs van Leeuwen}
-\author{Sergey Paramonov}
+\author{Sergey Paramonov, Samuel Kolb, Tias Guns, Luc De Raedt}
 \institute{KU Leuven}
 \date{\today}
 \newtheorem{opr}{Definition}[section]
@@ -167,8 +169,57 @@
 \end{frame}
 
 \begin{frame}[fragile]
-\frametitle{\ftmotivation}
+\frametitle{\ftmotivation: Flash-fill}
+%\transduration<0-15>{0}
+    \multiinclude[<+->][format=png, graphics={width=\textwidth}]{frames/frame}
 \end{frame}
+
+\begin{frame}
+  \frametitle{What is Flash-fill?} 
+\begin{itemize} \setlength{\itemsep}{+6mm}
+    \item learns string transformation
+    \item classic ML supervised setting 
+    \item one positive (or very few) example
+    \item integrated into Excel
+  \end{itemize}
+  \vspace{10pt}
+
+
+  {\Large \textbf{Key Question:} what if we make it unsupervised?}
+\end{frame}
+
+\begin{frame}[fragile]
+  \frametitle{Can we recover formulas from a CSV file?} 
+  \includegraphics[width=\linewidth]{csv.png}
+
+  \begin{itemize}[<+->]
+    \item What are the formulas here?
+    \item \begin{verbatim} T1[:, 6] = SUM(T1[:, 3:5], row) \end{verbatim}
+  \item  \begin{verbatim} T2[:, 2] = SUMIF(T1[:, 1]=T2[:, 1], T1[:, 6]) \end{verbatim}
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{What is new here?} 
+\begin{itemize} \setlength{\itemsep}{+6mm}
+    \item Not typical data settings: no variables in columns and transactions in rows -- everything mixed
+    \item Multi-relational learning (like sumif or lookup across multiple tables) 
+    \item Spreadsheet specific constraints -- fuzzy lookup or sumproduct
+    \item Plenty of surprises: Nones, semi-structured data, numeric and textual
+  \end{itemize}
+\end{frame}
+
+
+\begin{frame}
+  \frametitle{Demo!} 
+  Demo comes here
+\end{frame}
+
+
+
+
+
+
 
 
 \begin{frame}[fragile]
