--- a/presentation.tex
+++ b/presentation.tex
@@ -412,9 +412,20 @@ Example:
 
 
 \begin{frame}[fragile]
+  \frametitle{\ftevaluation}
+  \begin{block}{Case study}
+    \begin{figure}
+      \centering
+      \includegraphics[width=1\textwidth]{Demo2.png}
+    \end{figure}
+  \end{block}
+\end{frame}
+
+
+\begin{frame}[fragile]
 \frametitle{\ftevaluation}
 \begin{block}{Case study}
-  {\footnotesize
+  {\tiny
     \begin{align*}
       % Table 1
       &~\ecseries{\range{T_{1}}{\rangeall}{1}} \\
@@ -459,6 +470,21 @@ Example:
 
 
 \begin{frame}[fragile]
+  \frametitle{\ftevaluation}
+  \begin{block}{Case study}
+    \begin{itemize}
+      \item<1-> Recall intended constraints: $1.0$
+      \item<2-> Precision: $\frac{12}{18} = 0.67$
+      \begin{itemize}
+        \item Not that high
+      \end{itemize}
+      \item<3-> Few seconds
+    \end{itemize}
+  \end{block}
+\end{frame}
+
+
+\begin{frame}[fragile]
 \frametitle{\ftevaluation}
 \begin{block}{Benchmark}
   {\small\setlength{\tabcolsep}{0.33em}
@@ -470,7 +496,24 @@ Example:
         & Overall & Sheet avg & Overall & Sheet avg & Overall & Sheet avg \\ \hline
         \textbf{Tables} & 19 & 2.11 & 48 & 2.29 & 4 & 1 \\ \hline
         \textbf{Cells} & 1231 & 137 & 1889 & 90 & 2320 & 580 \\ \hline
-        \textbf{\begin{tabular}[c]{@{}l@{}}Relevant\\[-4pt] Constraints\end{tabular}} & 34 & 3.78 & 52 & 2.48 & 6 & 1.50 \\ \hline \hline
+        \textbf{\begin{tabular}[c]{@{}l@{}}Relevant\\[-4pt] Constraints\end{tabular}} & 34 & 3.78 & 52 & 2.48 & 6 & 1.50
+      \end{tabularx}
+    \end{table}
+  }
+  \end{block}
+\end{frame}
+
+
+\begin{frame}[fragile]
+\frametitle{\ftevaluation}
+\begin{block}{Benchmark}
+  {\small\setlength{\tabcolsep}{0.33em}
+    \begin{table}[]
+      \centering
+      \label{tbl:category_overview}
+      \begin{tabularx}{\linewidth}{lccccccc}
+        & \multicolumn{2}{c}{\textbf{Exercises} (9)} & \multicolumn{2}{c}{\textbf{Tutorials} (21)} & \multicolumn{2}{c}{\textbf{Data} (4)} \\
+        & Overall & Sheet avg & Overall & Sheet avg & Overall & Sheet avg \\ \hline
         \textbf{Recall} & 0.85 & 0.83 & 0.88 & 0.87 & 1.00 & 1.00 \\ \hline
         \textbf{\begin{tabular}[c]{@{}l@{}}Recall\\[-4pt] Supported\end{tabular}} & 1.00 & 1.00 & 1.00 & 1.00 & 1.00 & 1.00 \\ \hline
         \textbf{Precision} & 0.97 & 0.98 & 0.70 & 0.91 & 1.00 & 1.00 \\ \hline
@@ -478,14 +521,33 @@ Example:
       \end{tabularx}
     \end{table}
   }
-\end{block}
+  \pause
+  \begin{itemize}
+  \item<1-> Q1. How many intended constraints are found by \sname?
+  \begin{itemize}
+    \item High recall
+    \item All supported constraints always found  \end{itemize}
+  \item<2-> Q2. How precise is \sname?
+  \begin{itemize}
+    \item Precise on most spreadsheets
+    \item Duplicates / multiple ways to calculate thwart precision
+  \end{itemize}
+  \item<3-> Q3. How fast is \sname?
+  \begin{itemize}
+    \item Dependencies crucial
+  \end{itemize}
+\end{itemize}
+  \end{block}
 \end{frame}
 
 
 \begin{frame}[fragile]
 \frametitle{\ftevaluation}
 \begin{block}{Benchmark}
-
+  \begin{figure}[t]
+    \centering
+    \includegraphics[width=1\linewidth]{comparison.pdf}
+  \end{figure}
 \end{block}
 \end{frame}
 
@@ -494,11 +556,55 @@ Example:
 \frametitle{\ftevaluation}
 \begin{block}{Testing the limits}
   \begin{itemize}
-    \item Recall (\textit{Q1})
-    \item Precision (\textit{Q2})
-    \item Speed (\textit{Q3})
+    \item<1-> ``exps\_tias''
+    \begin{itemize}
+      \item 6 tables
+      \item 531 cells
+      \item Many duplicate columns across tables
+    \end{itemize}
+    \item<2-> Q1 Recall: $1.0$
+    \item<3-> Q2 Precision: $0.52 / 0.11$ (with / without equalities)
+    \begin{itemize}
+      \item Post-processing step (entailment / heuristic)
+    \end{itemize}
+    \item<4-> Q3 Speed: $14.30s$
   \end{itemize}
 \end{block}
+\end{frame}
+
+\begin{frame}[fragile]
+  \frametitle{Applications}
+  \begin{block}{Autocompletion}
+    \begin{figure}
+      \begin{center}
+        \includegraphics[width=0.65\linewidth]{learning.png}
+      \end{center}
+    \end{figure}
+  \end{block}
+\end{frame}
+
+
+\begin{frame}[fragile]
+  \frametitle{Applications}
+  \begin{block}{Conclusion}
+    \begin{itemize}
+      \item<+-> Approach that learns constraints in spreadsheet
+      \begin{itemize}
+        \item<+-> Accurate
+        \item<+-> Rather precise
+        \item<+-> Efficient
+      \end{itemize}
+    \end{itemize}
+  \end{block}
+  \pause
+  \begin{block}{Future work}
+    \begin{itemize}
+      \item<+-> Nested constraints
+      \item<+-> Sub vector-size
+      \item<+-> Post-processing (heuristic / entailment)
+      \item<+-> Noise
+    \end{itemize}
+  \end{block}
 \end{frame}
 
 \end{document}
